# walrusTee

./: .gitignore  Dockerfile  README.md  Readme.md  docker-compose.yml  final.sh  package.json  rofl.yaml
fibonacci-prime/: Cargo.toml  README.md
rustcompiler/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  runner.sh
rustcompiler/projects/user123/fibonacci-project/src/: main.rs
rustcompiler/projects/user123/project456/src/: main.rs
rustcompiler/src/: main.rs  types.rs
src/: complete-seal-test.ts  index.ts
src/move/: Move.toml
walrus-storage/: .env  package.json  pnpm-lock.yaml  versions.json
walrus-storage/src/: api.ts  deploy-package.ts  seal-walrus-integration.ts  setup-access-control.ts  simple-storage.ts  test-storage.ts
walrus-storage/src/move/sources/: access_control.move
