[package]
name = "rustTeeCompiler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tower = "0.4.13"
tower-http = { version = "0.6.0", features = ["cors"] }